--- a/src/Emanate.Core/Emanate.Core.csproj
+++ b/src/Emanate.Core/Emanate.Core.csproj
@@ -31,15 +31,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\ProductInfo.cs">
@@ -54,6 +58,9 @@
     <Compile Include="Configuration\ConfigurationAttribute.cs" />
     <Compile Include="Configuration\KeyAttribute.cs" />
     <Compile Include="Input\TeamCity\ITeamCityConnection.cs" />
+    <Compile Include="Input\TeamCity\TeamCityAdmin.xaml.cs">
+      <DependentUpon>TeamCityAdmin.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Input\TeamCity\TeamCityConfiguration.cs" />
     <Compile Include="Input\TeamCity\TeamCityMonitor.cs" />
     <Compile Include="Input\TeamCity\TeamCityConnection.cs" />
@@ -71,7 +78,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configuration\ReflectionConfigurationGenerator.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Page Include="Input\TeamCity\TeamCityAdmin.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
